changed picture format

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <nav>
             <div class="flex justify-around m-4">
                 <div class=" w-1/6 ">
-                    <img src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\logo-header.png" >
+                    <img src="C:\Users\farza\Downloads\Vector.jpg" >
                 </div>
                 <div>
                     <ul class="flex p-3 gap-8 font-xl text-black">
