--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <nav>
             <div class="flex justify-around m-4">
                 <div class=" w-1/6 ">
-                    <img src="C:\Users\farza\Downloads\Vector.jpg" >
+                    <img src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\logo-header.png" >
                 </div>
                 <div>
                     <ul class="flex p-3 gap-8 font-xl text-black">
@@ -80,29 +80,123 @@
         <h4 class="font-semibold text-4xl text-left px-28 pt-28 pb-12 text-[#179800]">Services</h4>
         <div class="flex flex-row gap-6 mx-28 mb-28">
         <div class="bg-[#EFEBE3] rounded-xl text-center  flex flex-col items-center justify-center px-8 pt-8 pb-11">
-            <img class=" bg-white  rounded-full"  src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\service.png">
+            <img class=" bg-white p-4 rounded-full"  src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\service.png">
             <h4 class="font-semibold text-2xl">24/7 Services </h4>
             <p class="font-light text-xl text-opacity-75">24Service is a platform where you can get your all desired services at one place.</p>
         </div>
         <div class="bg-[#EFEBE3] rounded-xl text-center  flex flex-col items-center justify-center px-8 pt-8 pb-11">
-            <img class=" bg-white  rounded-full" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\delivery.png">
+            <img class=" bg-white p-4  rounded-full" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\delivery.png">
             <h4 class="font-semibold text-2xl">Fast Delivery</h4>
             <p class="font-light text-xl text-opacity-75">We are equipped with the mobile app based delivery management software to  book & track parcels.</p>
         </div>
         <div class="bg-[#EFEBE3] rounded-xl text-center  flex flex-col items-center justify-center px-8 pt-8 pb-11">
-            <img class=" bg-white  rounded-full" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\healthy.png">
+            <img class=" bg-white p-4 rounded-full" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\healthy.png">
             <h4 class="font-semibold text-2xl">Healthy Products </h4>
             <p class="font-light text-xl text-opacity-75">We strive to only recommend products that adhere to our philosophy of eating better.</p>
         </div>
         </div>
-        <section class="bg-[#EFEBE3]">
-            <h4 class="font-semibold text-4xl text-left pt-32 pl-32">Popular Products</h4>
-            <div>
-                <h5>30% Off</h5>
-                <p>Discover a world of treats, toys, and essentials handpicked for </p>
-                <button>Buy now</button>
-                <img src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\vegetable-offer.png">
+        <section class="bg-[#EFEBE3] pb-32">
+            <h4 class="font-semibold text-4xl text-left pt-32 pl-32 pb-11 text-[#179800] ">Popular Products</h4>
+        <div class="flex flex-row gap-4 mx-16 pl-16 ">
+            <div class=" flex flex-col px-8 pt-11 gap-4 bg-gradient-to-br from-green-500 to-lime-200  rounded-xl">
+                <h5 class="font-normal text-white text-3xl text-left">30% Off</h5>
+                <p class="font-normal text-xl">Discover a world of treats, toys, and <br> essentials handpicked for </p>
+                <button class=" btn btn-ouline max-w-40 text-black bg-white text-center hover:bg-yellow-300 rounded-lg  font-normal text-2xl">Buy now</button>
+                <div><img class="w-56  justify-self-end" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\vegetable-offer.png"></div>
             </div>
+            <div class="grid grid-cols-3 gap-3 w-2/3">
+                <div class="flex flex-row bg-white  rounded-xl">
+                    <img class="w-12 bg-[#EFEBE3] m-3" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\onion.png">
+                    <div class="flex flex-col">
+                        <div class="flex flex-row gap-3"> 
+                            <i class="fa-solid fa-star"></i>
+                            <h6>4.5</h6>
+                        </div> 
+                        <h5>Onion 1Kg</h5>
+                    <h6>$39.99</h6></div>
+                </div>
+                <div class="flex flex-row bg-white  rounded-xl">
+                    <img class="w-12 bg-[#EFEBE3] m-3" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\potato.png">
+                    <div class="flex flex-col">
+                   <div class="flex flex-row gap-3">
+                    <i class="fa-solid fa-star" ></i>
+                    <h6>4.5</h6>
+                   </div>
+                    <h5>Potato 500gm</h5>
+                    <h6>$39.99</h6></div>
+                </div>
+                <div class="flex flex-row bg-white  rounded-xl">
+                    <img class="w-12 bg-[#EFEBE3] m-3" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\onion.png">
+                    <div class="flex flex-col">
+                    <div class="flex flex-row gap-3">
+                        <i class="fa-solid fa-star" ></i>
+                        <h6>4.5</h6></div>
+                    <h5>Onion 500gm</h5>
+                    <h6>$39.99</h6></div>
+                </div>
+                <div class="flex flex-row bg-white  rounded-xl">
+                    
+                    <img class="w-12 bg-[#EFEBE3] m-3" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\tomato.png">
+                    <div class="flex flex-col">
+                    <div class="flex flex-rowgap-3">
+                        <i class="fa-solid fa-star" ></i>
+                        <h6>4.5</h6></div>
+                    <h5>Tomato 1Kg</h5>
+                    <h6>$39.99</h6></div>
+                </div>
+                <div class="flex flex-row bg-white  rounded-xl">
+                    <img class="w-12 bg-[#EFEBE3] m-3" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\onion.png">
+                    <div class="flex flex-col">
+                    <div class="flex flex-row gap-3">
+                        <i class="fa-solid fa-star" ></i>
+                        <h6>4.5</h6>
+                    </div>
+                    <h5>Onion 1Kg</h5>
+                    <h6>$39.99</h6></div>
+                </div>
+                <div class="flex flex-row bg-white  rounded-xl">
+                    <img class="w-12 bg-[#EFEBE3] m-3" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\potato.png">
+                    <div class="flex flex-col">
+                   <div class="flex flex-row gap-3">
+                    <i class="fa-solid fa-star" ></i>
+                    <h6>4.5</h6>
+                   </div>
+                    <h5>Potato 1Kg</h5>
+                    <h6>$39.99</h6></div>
+                </div>
+                <div class="flex flex-row bg-white  rounded-xl">
+                    <img class="w-12 bg-[#EFEBE3] m-3" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\tomato.png">
+                    <div class="flex flex-col">
+                   <div class="flex flex-row gap-3">
+                    <i class="fa-solid fa-star" ></i>
+                    <h6>4.5</h6>
+                   </div>
+                    <h5>Tomato 1Kg</h5>
+                    <h6>$39.99</h6></div>
+                </div>
+                <div class="flex flex-row  bg-white  rounded-xl">
+                    <img class="w-12 bg-[#EFEBE3] m-3" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\potato.png"> 
+                    <div class="flex flex-col">
+                    <div class="flex flex-row gap-3">
+                        <i class="fa-solid fa-star" ></i>
+                        <h6>4.5</h6></div>
+                    <h5>Potato 2Kg</h5>
+                    <h6>$39.99</h6>
+                     </div>
+                </div>
+                <div class="flex flex-row  bg-white  rounded-xl">
+                    <img class="w-12 bg-[#EFEBE3] m-3" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\tomato.png">
+                    <div class="flex flex-col">
+                    <div class="flex flex-row gap-3">
+                        <i class="fa-solid fa-star" ></i>
+                    <h6>4.5</h6>
+                    </div>
+                    <h5>Tomato 2Kg</h5>
+                    <h6>$39.99</h6>
+                </div>
+                </div>
+            </div>
+        </div>
         </section>
     </main>
     
