--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 </head>
 <body class="Sora">
     <header class="bg-gradient-to-b from-white to-orange-100">
-        <nav class="sm:border-4 border-green-600">
-            <div class="flex justify-around m-4 sm:flex sm:justify-between">
+        <nav class=" lg:border-none sm:border-4 sm:border-green-600">
+            <div class="lg:flex lg:justify-around lg:m-4 sm:flex sm:justify-between">
                 <div class=" w-1/6 ">
                     <img src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\logo-header.png" >
                 </div>
                 <div>
-                    <ul class="flex p-3 gap-8 font-xl text-black sm:hidden">
+                    <ul class="lg:flex lg:p-3 lg:gap-8 lg:font-xl lg:text-black sm:hidden">
                         <li><a href="products.com">Product</a></li>
                         <li><a href="services.com">Services</a></li>
                         <li><a href="contact-us.com">Contact us</a></li>
                     </ul>
                 </div>
-                 <div class="flex gap-6 sm:hidden">
+                 <div class="lg:flex lg:gap-6 sm:hidden">
 
                     <div class=" py-3 gap-2">
                         <i class="fa-solid fa-magnifying-glass"></i>
@@ -62,7 +62,7 @@
                     <button class="btn btn-ouline  text-white bg-[#179800] text-xl text-center hover:bg-pink-400 rounded-lg">Register</button>
                 </div>
                 </div>
-                <i class="fa-solid fa-bars hidden sm:block"></i>
+                <i class="fa-solid fa-bars lg:hidden sm:block"></i>
             </div>
         </nav>
         <section>
@@ -79,7 +79,7 @@
     </header>
     <main>
         <h4 class="font-semibold text-4xl text-left px-28 pt-28 pb-12 text-[#179800]">Services</h4>
-        <div class="flex flex-row gap-6 mx-28 mb-28 sm:flex sm:flex-col sm:gap-5  sm:w-2/3">
+        <div class="lg:flex lg:flex-row lg:gap-6 lg:mx-32 lg:mb-28 sm:flex sm:flex-col sm:gap-5 sm:p-10  ">
         <div class="bg-[#EFEBE3] rounded-xl text-center  flex flex-col items-center justify-center px-8 pt-8 pb-11">
             <img class=" bg-white p-4 rounded-full"  src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\service.png">
             <h4 class="font-semibold text-2xl">24/7 Services </h4>
@@ -98,14 +98,14 @@
         </div>
         <section class="bg-[#EFEBE3] pb-32">
             <h4 class="font-semibold text-4xl text-left pt-32 pl-32 pb-11 text-[#179800] ">Popular Products</h4>
-        <div class="flex flex-row gap-4 mx-16 pl-16 sm:flex-col sm:w-auto ">
+        <div class="lg:flex lg:flex-row lg:gap-4 lg:mx-16 lg:pl-16 sm:flex-col sm:w-auto sm:p-10 ">
             <div class=" flex flex-col px-8 pt-11 gap-4 bg-gradient-to-br from-green-500 to-lime-200  rounded-xl">
                 <h5 class="font-normal text-white text-3xl text-left">30% Off</h5>
                 <p class="font-normal text-xl">Discover a world of treats, toys, and <br> essentials handpicked for </p>
                 <button class=" btn btn-ouline max-w-40 text-black bg-white text-center hover:bg-yellow-300 rounded-lg  font-normal text-2xl">Buy now</button>
                 <div><img class="w-56  justify-self-end" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\vegetable-offer.png"></div>
             </div>
-            <div class="grid grid-cols-3 gap-5 w-2/3 sm:grid-cols-2 sm:w-3/4 sm:justify-center sm:items-center sm:p-10 sm:mx-7">
+            <div class="lg:grid lg:grid-cols-3 lg:gap-5 lg:w-2/3 sm:grid sm:grid-cols-2 sm:gap-14 sm:w-auto sm:justify-center sm:items-center sm:p-10">
                 <div class="flex flex-row bg-white  rounded-xl">
                     <img class="w-1/3 bg-[#EFEBE3] m-3 rounded-xl" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\onion.png">
                     <div class="flex flex-col pt-2 pl-4 pr-8 justify-center items-center">
@@ -185,7 +185,7 @@
                     <h6 class="font-medium text-xl">$39.99</h6>
                      </div>
                 </div>
-                <div class="flex flex-row  bg-white  rounded-xl sm:hidden">
+                <div class="lg:flex lg:flex-row  lg:bg-white  lg:rounded-xl sm:hidden">
                     <img class="w-1/3 bg-[#EFEBE3] m-3 rounded-xl" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\tomato.png">
                     <div class="flex flex-col pt-2 pl-4 pr-8 justify-center items-center">
                     <div class="flex flex-row gap-3">
@@ -201,18 +201,18 @@
         </section>
         <section>
             <h4 class="font-semibold text-4xl text-left pt-32 pl-32 pb-12 text-[#179800]">Arrival & Offers</h4>
-        <div class="flex flex-row gap-5 sm:flex-col sm:justify-center sm:items-center">
-            <div class="flex flex-row gap-12 bg-[#115414] ml-32 w-2/4 rounded-xl  sm:w-3/4 sm:ml-1">
+        <div class="lg:flex lg:flex-row lg:gap-5 sm:flex sm:flex-col sm:p-10 sm:mx-10 sm:gap-5">
+            <div class="flex flex-row gap-12 bg-[#115414] ml-32  rounded-xl lg:w-2/4 sm:w-11/12 sm:ml-10">
                 <div class="flex flex-col justify-center items-center gap-8 p-5 ">
                     <img src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\dawat-logo.png">
-                    <button class=" btn btn-ouline border-0 text-white bg-[#63B76D]  Poppins text-2xl font-normal hover:bg-blue-600  text-center rounded-md">Cook Exotic Dishes</button>
-                    <h3 class="Poppins text-white text-4xl">UP to <span class="font-bold">20% OFF</span></h3>
+                    <button class=" btn btn-ouline border-0 text-white bg-[#63B76D] overflow-hidden  Poppins lg:text-2xl sm:text-xs font-normal hover:bg-blue-600  text-center rounded-md">Cook Exotic Dishes</button>
+                    <h3 class="Poppins text-white lg:text-4xl sm:text-2xl ">UP to <span class="font-bold">20% OFF</span></h3>
                 </div>
                 <div>
                     <img class="px-5 pt-20" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\dawat-mock-up.png">
                 </div>
             </div>
-            <div class="flex flex-row gap-5 bg-[#102861]  w-1/3 mr-24 rounded-xl sm:w-3/4 sm:mr-1">
+            <div class="flex flex-row gap-5 bg-[#102861]  lg:w-1/3 sm:w-11/12 mr-24 lg:ml-0 sm:ml-8 rounded-xl">
                 <div  class="flex flex-col  gap-8 p-5 ">
                     <div  class=" justify-start"  > <img src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\india-gate-logo.png"></div>
                     <button class=" btn btn-ouline border-0 text-white bg-[#2A4D97]  Poppins text-xl font-normal hover:bg-red-800  text-center rounded-md">World's No.1 Rice</button>
@@ -227,7 +227,7 @@
         <section>
             <h3 class="pt-20 font-semibold text-4xl text-left pl-32 pb-5 text-[#179800]">Customer Reviews</h3>
             <p class="py-5 pl-32 font-medium text-xl text-left text-slate-700 ">See what our customers say about our products</p>
-            <div class="grid grid-cols-2 gap-5 w-auto mx-32 my-12 sm:grid-cols-1">
+            <div class="lg:grid lg:grid-cols-2 lg:gap-5 lg:w-auto lg:mx-32 lg:my-12 sm:grid sm:grid-cols-1 sm:gap-10 sm:mx-14">
                 <div class="flex flex-row gap-3 bg-pink-300 rounded-lg p-5  justify-center items-center">
                     <div><img class="rounded-3xl p-5 bg-pink-100  w-1/2" src="C:\Users\farza\Downloads\review.jpg"></div>
                     <div class="flex flex-col p-5">
@@ -263,12 +263,12 @@
             </div>
         </section>
         <section>
-            <div class=" relative inset-y-20 z-20 bg-[#EFEBE3]  flex flex-row gap-28 rounded-2xl mx-32 mt-40 sm:flex-col sm:gap-8 sm:p-14 ">
+            <div class=" lg:relative lg:inset-y-20 lg:z-20 bg-[#EFEBE3]  lg:flex lg:flex-row lg:gap-28 rounded-2xl lg:mx-32 lg:mt-40 sm:relative sm:inset-y-20 sm:z-20 sm:flex sm:flex-col sm:gap-8 sm:p-14 sm:mt-32 sm:mx-16">
                 <div>
-                    <img class="py-20 px-14 sm:p-5" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\vegetable-busket.png">
+                    <img class="lg:py-20 lg:px-14 sm:p-5 sm:mr-10" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\vegetable-busket.png">
                 </div>
-                <div class="flex flex-col gap-5 justify-start items-start sm:pt-5 sm:justify-center sm:items-center">
-                    <h4 class="pt-24 pb-3 font-semibold text-4xl sm:pt-10">Get Grocery News!</h4>
+                <div class="flex flex-col gap-5 lg:justify-start lg:items-start sm:justify-center sm:items-center lg:pt-10 sm:pt-5">
+                    <h4 class="lg:pt-24 lg:pb-3 lg:font-semibold lg:text-4xl sm:pt-10">Get Grocery News!</h4>
                     <p class="font-normal text-xl">Exclusive training tips, ticks, product deals and more.</p>
                     <input type="email" placeholder="Enter email..." class="font-normal text-xs w-2/3 p-4 rounded-xl">
                     <button class="btn btn-outline w-1/3 bg-[#179800] text-white border-0 hover:bg-sky-600">Subscribe</button>
@@ -278,15 +278,15 @@
         
     </main>
     <footer> 
-        <div class=" flex flex-row justify-around  py-36   bg-[#179800] text-white sm:flex-col sm:pt-30 sm:pb-10 sm:px-4 sm:gap-8">
+        <div class=" lg:flex lg:flex-row justify-around py-36 px-12 bg-[#179800] text-white sm:flex sm:flex-col sm:pt-10 sm:px-20">
         <div class="flex flex-col">
-            <div>
-                <img class="pb-3" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\logo-footer.png">
+            <div class="">
+                <img class="pt-20 pb-3" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\logo-footer.png">
             </div>
-            <p>Discover a world of treats, toys, and <br> essentials handpicked for your furry <br> friends</p>
+            <p class="font-normal text-xl pb-14">Discover a world of treats, toys, and <br> essentials handpicked for your furry <br> friends</p>
         </div>
-        <div class="">
-            <ul class="flex flex-col gap-8">
+        <div>
+            <ul class="flex flex-col gap-8 lg:pt-20 sm:pt-16 lg:pb-10 sm:pb-16">
                 <li><a href="footerlink"></a>Product</li>
                 <li><a href="footerlink"></a>Services</li>
                 <li><a href="footerlink"></a>About Us</li>
