--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <nav class=" lg:border-none sm:border-4 sm:border-green-600">
             <div class="lg:flex lg:justify-around lg:m-4 sm:flex sm:justify-between">
                 <div class=" w-1/6 ">
-                    <img src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\logo-header.png" >
+                    <img src="./projects/b11-a3-living-lab/assignment_03_category_0002/c2-assets/logo-header.png" >
                 </div>
                 <div>
                     <ul class="lg:flex lg:p-3 lg:gap-8 lg:font-xl lg:text-black sm:hidden">
