--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <p class="font-400 text-xl text-pretty py-8">Shop your daily essentials at unbeatable prices. From fresh produce to pantry<br> staples, we’ve got you covered every day!</p>
                 </div>
             <div>
-                <img class="m-auto animate-pulse duration-[1s,15s] delay-100" src="C:\projects\B11-A3-Living-Lab\Assignment_03_Category_0002\c2-assets\hero-vegetables.png" >
+                <img class="m-auto animate-pulse duration-[1s,15s] delay-100" src="c:/projects/natures-platter/c2-assets/hero-vegetables.png" >
             </div>
             </div>
         </section>
